# upnm_fl_2

./: .env.example  .env.test  .gitignore  AUTHENTICATION.md  CLAUDE.md  FEDERATED_LEARNING_USER_GUIDE.md  PRD.md  QWEN.md  README.md  analyze_training.py  check_mainnet_readiness.py  complete_workflow_setup.py  debug_server_auth.py  demo_icp_orchestration.py  demonstrate_metadata_system.py  deploy_mainnet_canister.py  deploy_to_mainnet.py  diagnose_model.py  federated_learning_workflow.py  icp_auth_client.py  icp_cli.py  icp_client.py  manage_client_auth.py  model_verification.py  monitor_logs.py  pyproject.toml  quick_setup.py  remote_mainnet_client.py  run_authenticated_training.py  run_client.py  run_federated_learning.py  run_mainnet_training.py  run_server.py  run_simulation.py  run_training_workflow.py  setup_icp_auth.py  setup_mainnet_identities.py  setup_mainnet_wallet.md  setup_test_identities.py  simple_model_verification.py  (+21 more)
client/: .env.example  .env.fl_client_1  .env.fl_client_2  .env.fl_client_3  .gitignore  client.py
client/utils/: data_preprocessing.py  federated_utils.py  model.py
dataset/: test_data.csv
dataset/clients/: client1_data.csv  client2_data.csv  client3_data.csv  split_dataset.py
docs/: client_authentication_guide.md  enhanced_authentication.md  project_requirements.md  technical_specifications.md  tree_configuration_guide.md
icp/fl_cvd_backend/: README.md  canister_ids.json  dfx.json  package-lock.json  package.json
icp/fl_cvd_backend/src/fl_cvd_backend_backend/: main.mo
server/: server.py
(+2 files in other folders)
